--- a/MemoryGame/app/src/main/res/layout/activity_selectionscreen.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_selectionscreen.xml
@@ -1,53 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
         android:id="@+id/playerOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginTop="32dp"
         android:text="@string/playerID"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/playerName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/playerName"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:autofillHints="username"
         android:ems="10"
         android:hint="@string/playerNameSelect"
         android:inputType="textPersonName"
-        android:autofillHints="username"
-        app:layout_constraintBaseline_toBaselineOf="@+id/AICheckBox"
+        app:layout_constraintEnd_toStartOf="@+id/AICheckBox"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/playerOptions" />
+        app:layout_constraintTop_toBottomOf="@+id/playerOptions" />
 
     <CheckBox
         android:id="@+id/AICheckBox"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="56dp"
         android:onClick="checkBoxClicked"
         android:text="@string/AISelect"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toEndOf="@+id/playerName"
-        tools:layout_editor_absoluteY="143dp" />
+        app:layout_constraintTop_toBottomOf="@+id/playerOptions" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
