updated the previously created activities to work in landscape mode.

--- a/MemoryGame/app/src/main/res/layout/activity_find_player.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_find_player.xml
@@ -11,7 +11,7 @@
         android:id="@+id/playerSearchInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:text="@string/playersearchinfo"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/editText2"
@@ -24,7 +24,7 @@
         android:id="@+id/editText2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPersonName"
@@ -39,7 +39,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:text="@string/mode"
         android:textAlignment="center"
         android:textSize="24sp"
@@ -52,7 +52,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/pairsofthreecards"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -65,7 +65,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/pairsoftwocards"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -78,7 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:text="@string/battle"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -89,7 +89,7 @@
         android:id="@+id/wins"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="40dp"
         android:text="@string/wins"
         android:textAlignment="center"
@@ -102,7 +102,7 @@
         android:id="@+id/wins1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="40dp"
         android:text="@string/wins1"
         android:textAlignment="center"
@@ -115,7 +115,7 @@
         android:id="@+id/wins2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="40dp"
         android:text="@string/wins2"
         android:textAlignment="center"
@@ -137,43 +137,39 @@
         app:layout_constraintTop_toBottomOf="@+id/wins2" />
 
     <Button
-        android:id="@+id/deletePlayer"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
-        android:layout_marginEnd="80dp"
-        android:text="@string/deletePlayer"
-        app:layout_constraintBottom_toTopOf="@+id/exit1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/findplayer2" />
-
-    <Button
         android:id="@+id/findplayer2"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="80dp"
         android:text="@string/findplayer"
-        app:layout_constraintBottom_toTopOf="@+id/deletePlayer"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/deletePlayer"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Battle"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintTop_toBottomOf="@+id/Battle" />
+
+    <Button
+        android:id="@+id/deletePlayer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/deletePlayer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/findplayer2"
+        app:layout_constraintTop_toBottomOf="@+id/Battle" />
 
     <Button
         android:id="@+id/exit1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="80dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="8dp"
         android:text="@string/exit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/deletePlayer" />
+        app:layout_constraintTop_toBottomOf="@+id/findplayer2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
