--- a/MemoryGame/app/src/main/res/layout/activity_main.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_main.xml
@@ -1,238 +1,89 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent" 
-   android:orientation="vertical"
-   android:gravity="center"
-   android:weightSum="10">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card01"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card02"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card03"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card04"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card05"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card06"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card07"/>
-    
-  
-</LinearLayout>
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card08"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card09"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card10"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card11"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card12"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card13"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card14"/>
-    
-  
-</LinearLayout>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card15"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card16"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card17"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card18"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card19"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card20"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card21"/>
-    
-  
-</LinearLayout>
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card22"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card23"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card24"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card25"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card26"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card27"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card28"/>
-    
-  
-</LinearLayout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="vertical"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="2">
    <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/ma_text1"/>
-   <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/ma_text2"/>  
-</LinearLayout>
-</LinearLayout>
+       android:id="@+id/textView"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:layout_marginTop="32dp"
+       android:text="@string/memoryGame"
+       android:textAlignment="center"
+       android:textColor="#F00"
+       android:textSize="48sp"
+       android:textStyle="bold"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toTopOf="parent" />
+
+   <Button
+       android:id="@+id/playGame"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="80dp"
+       android:layout_marginTop="64dp"
+       android:layout_marginEnd="80dp"
+       android:text="@string/playGame"
+       app:layout_constraintBottom_toTopOf="@+id/rulesButton"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.50"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@id/textView"
+       app:layout_constraintVertical_bias="0.5" />
+
+   <Button
+       android:id="@+id/rulesButton"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="80dp"
+       android:layout_marginEnd="80dp"
+       android:text="@string/rules"
+       app:layout_constraintBottom_toTopOf="@+id/FindPl"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.0"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/playGame" />
+
+   <Button
+       android:id="@+id/findPlayerButton"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="80dp"
+       android:layout_marginEnd="80dp"
+       android:text="@string/highscores"
+       app:layout_constraintBottom_toTopOf="@+id/quitGameButton"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.5"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/FindPl" />
+
+   <Button
+       android:id="@+id/FindPl"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="80dp"
+       android:layout_marginEnd="80dp"
+       android:text="@string/findplayer"
+       app:layout_constraintBottom_toTopOf="@+id/findPlayerButton"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/rulesButton" />
+
+   <Button
+       android:id="@+id/quitGameButton"
+       android:layout_width="0dp"
+       android:layout_height="wrap_content"
+       android:layout_marginStart="80dp"
+       android:layout_marginEnd="80dp"
+       android:layout_marginBottom="24dp"
+       android:text="@string/quitGame"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintHorizontal_bias="0.5"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintTop_toBottomOf="@+id/findPlayerButton" />
+</androidx.constraintlayout.widget.ConstraintLayout>
