Connected the main menu activities with the main menu

--- a/MemoryGame/app/src/main/res/layout/activity_main.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
        android:layout_marginTop="64dp"
        android:layout_marginEnd="80dp"
        android:text="@string/playGame"
+       android:onClick="startGame"
        app:layout_constraintBottom_toTopOf="@+id/rulesButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
@@ -42,6 +43,7 @@
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/rules"
+       android:onClick="rulesActivity"
        app:layout_constraintBottom_toTopOf="@+id/FindPl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
@@ -55,6 +57,7 @@
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/highscores"
+       android:onClick="highScoresActivity"
        app:layout_constraintBottom_toTopOf="@+id/quitGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
@@ -68,6 +71,7 @@
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/findplayer"
+       android:onClick="findPlayerActivity"
        app:layout_constraintBottom_toTopOf="@+id/findPlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
@@ -81,6 +85,7 @@
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="24dp"
        android:text="@string/quitGame"
+       android:onClick="exitApplication"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
