--- a/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
@@ -88,6 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
         android:text="@string/previousButton"
+        android:onClick="previousActivity"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/difficulty_group" />
@@ -98,6 +99,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:text="@string/nextButton"
+        android:onClick="nextActivity"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
