--- a/MemoryGame/app/src/main/res/layout/activity_mode_selection.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_mode_selection.xml
@@ -105,14 +105,24 @@
         android:id="@+id/goToSelectionScreen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="submitSelections"
         android:text="@string/playerOptions"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.876"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player_group"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias="0.704"
-        android:onClick="submitSelections"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/goToMenu"
+        app:layout_constraintTop_toBottomOf="@id/player_group" />
+
+    <Button
+        android:id="@+id/goToMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/mainMenu"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/goToSelectionScreen"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player_group"
+        app:layout_constraintVertical_bias="0.511"
+        android:onClick="goToMainMenu"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
