--- a/MemoryGame/app/src/main/res/layout/activity_rules_page.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_rules_page.xml
@@ -61,15 +61,16 @@
 
     <Button
         android:id="@+id/backButton"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginStart="80dp"
+        android:layout_marginEnd="80dp"
         android:onClick="goToMainMenu"
         android:text="@string/mainMenu"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rulesBattle"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/rulesBattle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
