Remade the selection Screen activity

--- a/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
@@ -6,58 +6,100 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-
     <TextView
         android:id="@+id/playerOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:textAlignment="center"
+        android:text="@string/playeroptions"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:textColor="#F00"
+        app:layout_constraintBottom_toTopOf="@id/player1Options"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/playerName"
+    <TextView
+        android:id="@+id/player1Options"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="72dp"
+        android:text="@string/player1options"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/player1Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/playerOptions" />
+
+    <EditText
+        android:id="@+id/player1Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
         android:autofillHints="username"
         android:ems="10"
         android:hint="@string/playerNameSelect"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toStartOf="@+id/AICheckBox"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintBottom_toTopOf="@id/player2Options"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerOptions" />
+        app:layout_constraintTop_toBottomOf="@id/player1Options" />
+
+    <TextView
+        android:id="@+id/player2Options"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:text="@string/player2options"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/player2Name"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player1Name" />
+
+    <EditText
+        android:id="@+id/player2Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:autofillHints="username"
+        android:ems="10"
+        android:hint="@string/playerNameSelect"
+        android:inputType="textPersonName"
+        app:layout_constraintHorizontal_bias="0.237"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/AICheckBox"
+        app:layout_constraintTop_toBottomOf="@id/player2Options"
+        app:layout_constraintBottom_toTopOf="@id/difficultygroup"/>
 
     <CheckBox
         android:id="@+id/AICheckBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="88dp"
-        android:layout_marginEnd="56dp"
         android:onClick="checkBoxClicked"
         android:text="@string/AISelect"
+        app:layout_constraintBottom_toTopOf="@id/difficultygroup"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/playerName"
-        app:layout_constraintTop_toBottomOf="@+id/playerOptions" />
+        app:layout_constraintStart_toEndOf="@id/player2Name"
+        app:layout_constraintTop_toBottomOf="@id/player2Options"
+        app:layout_constraintVertical_bias="0.688" />
 
     <RadioGroup
-        android:id="@+id/difficulty_group"
+        android:id="@+id/difficultygroup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="24dp"
         android:layout_marginStart="40dp"
         android:layout_marginEnd="40dp"
         android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/playerName">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player2Name"
+        app:layout_constraintBottom_toTopOf="@id/nextButton">
 
         <RadioButton
             android:id="@+id/radio_beginner"
@@ -71,39 +113,34 @@
             android:layout_width="112dp"
             android:layout_height="wrap_content"
             android:onClick="radioButtonClicked"
-            android:text="@string/novice" />
-
+            android:text="@string/novice"/>
         <RadioButton
             android:id="@+id/radio_expert"
             android:layout_width="112dp"
             android:layout_height="wrap_content"
             android:onClick="radioButtonClicked"
-            android:text="@string/expert" />
+            android:text="@string/expert"/>
     </RadioGroup>
 
     <Button
         android:id="@+id/previousButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:text="@string/previousButton"
         android:onClick="previousActivity"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/difficulty_group" />
-
+        app:layout_constraintEnd_toStartOf="@id/nextButton"
+        app:layout_constraintTop_toBottomOf="@id/difficultygroup"
+        app:layout_constraintBottom_toBottomOf="parent"/>
     <Button
         android:id="@+id/nextButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
         android:text="@string/nextButton"
         android:onClick="nextActivity"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toEndOf="@id/previousButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/previousButton"
-        app:layout_constraintVertical_bias="0.144" />
-
+        app:layout_constraintTop_toBottomOf="@id/difficultygroup"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
