Fixed the aesthetic of the app Changed the text color to white Added a background

--- a/MemoryGame/app/src/main/res/layout/activity_highscores.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_highscores.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.android.MemoryGameActivities.Highscores">
 
     <TextView
@@ -13,6 +14,8 @@
         android:layout_marginTop="32dp"
         android:text="@string/highscores"
         android:textSize="36sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,6 +30,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/mode"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/pairsoftwocards2"
         app:layout_constraintEnd_toStartOf="@+id/PlayerData"
@@ -43,6 +47,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/pairs_of_2_cards"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/pairsofthreecards2"
         app:layout_constraintEnd_toStartOf="@+id/PlayerData1"
@@ -59,6 +64,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/pairs_of_3_cards"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/battle2"
         app:layout_constraintEnd_toStartOf="@+id/PlayerData2"
@@ -75,6 +81,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/battle"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/PlayerData3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -89,6 +96,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/player"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/PlayerData1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +112,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/player1"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/PlayerData2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -118,6 +127,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/player2"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/PlayerData3"
         app:layout_constraintEnd_toEndOf="parent"
@@ -133,6 +143,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/player3"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
