--- a/MemoryGame/app/src/main/res/layout/activity_rules_page.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_rules_page.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.android.MemoryGameActivities.rulesPage">
 
     <TextView
         android:id="@+id/rulesHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/rulesTitle"
-        android:textColor="#F00"
+        android:textColor="#FFFFFF"
         android:textSize="44sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/rulesPairsOf2"
@@ -27,6 +29,7 @@
         android:text="@string/pairOf2Rules"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/rulesPairsOf3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,6 +43,7 @@
         android:text="@string/pairOf3Rules"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/rulesBattle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -53,6 +57,7 @@
         android:text="@string/BattleRules"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
