--- a/MemoryGame/app/src/main/res/layout/activity_find_player.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_find_player.xml
@@ -5,16 +5,19 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.android.MemoryGameActivities.findPlayerActivity">
 
     <TextView
         android:id="@+id/playerSearchInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:layout_marginBottom="16dp"
         android:text="@string/playersearchinfo"
-        android:textSize="18sp"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@+id/playerTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -29,7 +32,8 @@
         android:autofillHints=""
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="@string/searchplayer"
+        android:hint="@string/searchplayer"
+        android:textColorHint="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.398"
         app:layout_constraintStart_toStartOf="parent"
@@ -43,6 +47,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:text="@string/mode"
+        android:textColor="#FFFFFF"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/pairsoftwocards"
@@ -60,6 +65,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/pairs_of_3_cards"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/Battle"
         app:layout_constraintEnd_toStartOf="@+id/wins2"
@@ -76,6 +82,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/pairs_of_2_cards"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/pairsofthreecards"
         app:layout_constraintEnd_toStartOf="@+id/wins1"
@@ -92,6 +99,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/battle"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toStartOf="@+id/wins3"
         app:layout_constraintHorizontal_bias="0.5"
@@ -106,6 +114,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/wins"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/wins1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -121,6 +130,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/wins1"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/wins2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -134,6 +144,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
+        android:textColor="#FFFFFF"
         android:text="@string/wins2"
         android:textAlignment="center"
         android:textSize="18sp"
@@ -151,6 +162,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/wins3"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
