--- a/MemoryGame/app/src/main/res/layout/activity_main.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
    <TextView
        android:id="@+id/textView"
@@ -13,7 +14,7 @@
        android:layout_marginTop="32dp"
        android:text="@string/memoryGame"
        android:textAlignment="center"
-       android:textColor="#F00"
+       android:textColor="	#FFFFFF"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
