--- a/MemoryGame/app/src/main/res/layout/activity_mode_selection.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_mode_selection.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context="com.android.MemoryGameActivities.ModeSelection">
 
 
@@ -11,10 +12,12 @@
         android:id="@+id/modeSelection"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="@string/selectMode"
         android:textAlignment="center"
         android:textSize="48sp"
         android:textStyle="bold"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/radio_po2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
