--- a/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
@@ -4,16 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/background">
 
     <TextView
         android:id="@+id/playerOptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="32dp"
         android:text="@string/playeroptions"
-        android:textColor="#F00"
-        android:textSize="24sp"
+        android:textColor="#FFFFFF"
+        android:textSize="36sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/player1Options"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,6 +28,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/player1options"
         android:textSize="24sp"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/player1Name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +43,7 @@
         android:autofillHints="username"
         android:ems="10"
         android:hint="@string/playerNameSelect"
+        android:textColorHint="#FFFFFF"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@id/player2Options"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,6 +58,7 @@
         android:layout_marginTop="8dp"
         android:text="@string/player2options"
         android:textSize="24sp"
+        android:textColor="#FFFFFF"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/player2Name"
         app:layout_constraintEnd_toEndOf="parent"
@@ -68,6 +72,7 @@
         android:autofillHints="username"
         android:ems="10"
         android:hint="@string/playerNameSelect"
+        android:textColorHint="#FFFFFF"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@id/difficultygroup"
         app:layout_constraintEnd_toStartOf="@id/AICheckBox"
@@ -81,6 +86,7 @@
         android:layout_height="wrap_content"
         android:onClick="checkBoxClicked"
         android:text="@string/AISelect"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/difficultygroup"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/player2Name"
@@ -91,8 +97,8 @@
         android:id="@+id/difficultygroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginStart="60dp"
+        android:layout_marginEnd="60dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toTopOf="@id/nextButton"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,21 +110,24 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="radioButtonClicked"
-            android:text="@string/beginner" />
+            android:text="@string/beginner"
+            android:textColor="#FFFFFF"/>
 
         <RadioButton
             android:id="@+id/radio_novice"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:onClick="radioButtonClicked"
-            android:text="@string/novice" />
+            android:text="@string/novice"
+            android:textColor="#FFFFFF"/>
 
         <RadioButton
             android:id="@+id/radio_expert"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="radioButtonClicked"
-            android:text="@string/expert" />
+            android:text="@string/expert"
+            android:textColor="#FFFFFF"/>
     </RadioGroup>
 
     <Button
