--- a/MemoryGame/app/src/main/res/layout/activity_rules_page.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_rules_page.xml
@@ -11,7 +11,7 @@
         android:id="@+id/rulesHeader"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="8dp"
         android:text="@string/rulesTitle"
         android:textColor="#FFFFFF"
         android:textSize="44sp"
@@ -26,10 +26,11 @@
         android:id="@+id/rulesPairsOf2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/pairOf2Rules"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/rulesPairsOf3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,10 +41,11 @@
         android:id="@+id/rulesPairsOf3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/pairOf3Rules"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toTopOf="@id/rulesBattle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -54,15 +56,16 @@
         android:id="@+id/rulesBattle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:text="@string/BattleRules"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#FFFFFF"
+        app:layout_constraintBottom_toTopOf="@id/backButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/rulesPairsOf3"
-        app:layout_constraintBottom_toTopOf="@id/backButton"/>
+        app:layout_constraintTop_toBottomOf="@id/rulesPairsOf3" />
 
     <Button
         android:id="@+id/backButton"
@@ -70,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginEnd="80dp"
+        android:layout_marginBottom="8dp"
         android:onClick="goToMainMenu"
         android:text="@string/mainMenu"
         app:layout_constraintBottom_toBottomOf="parent"
