completed the app. Huge bug detected in Battle Managers

--- a/MemoryGame/app/src/main/res/layout/activity_find_player.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_find_player.xml
@@ -29,11 +29,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:autofillHints=""
+        android:autofillHints="@string/searchplayer"
         android:ems="10"
         android:hint="@string/searchplayer"
         android:inputType="textPersonName"
-        android:textColorHint="#FFFFFF"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#A9A9A9"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.398"
         app:layout_constraintStart_toStartOf="parent"
