--- a/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
+++ b/MemoryGame/app/src/main/res/layout/activity_selection_screen.xml
@@ -43,8 +43,9 @@
         android:autofillHints="username"
         android:ems="10"
         android:hint="@string/playerNameSelect"
-        android:textColorHint="#FFFFFF"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#A9A9A9"
         app:layout_constraintBottom_toTopOf="@id/player2Options"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -72,8 +73,9 @@
         android:autofillHints="username"
         android:ems="10"
         android:hint="@string/playerNameSelect"
-        android:textColorHint="#FFFFFF"
         android:inputType="textPersonName"
+        android:textColor="#FFFFFF"
+        android:textColorHint="#A9A9A9"
         app:layout_constraintBottom_toTopOf="@id/difficultygroup"
         app:layout_constraintEnd_toStartOf="@id/AICheckBox"
         app:layout_constraintHorizontal_bias="0.237"
