--- a/MemoryGame/app/src/main/res/layout/battle.xml
+++ b/MemoryGame/app/src/main/res/layout/battle.xml
@@ -1,237 +1,286 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent" 
-   android:orientation="vertical"
-   android:gravity="center"
-   android:weightSum="10">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card01"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card02"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card03"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card04"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card05"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card06"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card07"/>
-    
-  
-</LinearLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="10">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card08"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card09"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card10"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card11"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card12"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card13"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card14"/>
-    
-  
-</LinearLayout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="vertical"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="2">
-   <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_text1"/>
-   <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_text2"/>  
-</LinearLayout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card15"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card16"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card17"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card18"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card19"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card20"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card21"/>
-    
-  
-</LinearLayout>
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card22"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card23"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card24"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card25"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card26"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card27"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/b_card28"/>
-    
-  
-</LinearLayout>
+      <Button
+          android:id="@+id/b_card01"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card02"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card03"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card04"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card05"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card06"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card07"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
+
+      <Button
+          android:id="@+id/b_card08"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card09"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card10"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card11"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card12"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card13"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card14"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
+
+   <LinearLayout
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="vertical"
+       android:weightSum="3">
+
+      <TextView
+          android:id="@+id/b_text1"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1"
+          android:textColor="#FFFFFF" />
+
+      <TextView
+          android:id="@+id/b_text2"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1"
+          android:textColor="#FFFFFF" />
+
+      <TextView
+          android:id="@+id/b_text3"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1"
+          android:textColor="#FFFFFF" />
+   </LinearLayout>
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
+
+      <Button
+          android:id="@+id/b_card15"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card16"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card17"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card18"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card19"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card20"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card21"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
+
+      <Button
+          android:id="@+id/b_card22"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card23"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card24"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card25"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card26"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card27"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/b_card28"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
 </LinearLayout>
