--- a/MemoryGame/app/src/main/res/layout/cards3.xml
+++ b/MemoryGame/app/src/main/res/layout/cards3.xml
@@ -1,213 +1,257 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:background="@drawable/background"
     android:gravity="center"
+    android:orientation="vertical"
     android:weightSum="10">
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
-       android:orientation="horizontal"
-       android:gravity="center"
        android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
        android:weightSum="6">
+
       <Button
+          android:id="@+id/card_3_01"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_01"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_02"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_02"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_03"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_03"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_04"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_04"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_05"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_05"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_06"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_06"/>
+          android:layout_weight="1" />
 
 
    </LinearLayout>
 
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
-       android:orientation="horizontal"
-       android:gravity="center"
        android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
        android:weightSum="6">
+
       <Button
+          android:id="@+id/card_3_07"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_07"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_08"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_08"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_09"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_09"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_10"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_10"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_11"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_11"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_12"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_12"/>
+          android:layout_weight="1" />
 
 
    </LinearLayout>
 
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
-       android:orientation="horizontal"
-       android:gravity="center"
        android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
        android:weightSum="6">
+
       <Button
+          android:id="@+id/card_3_13"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_13"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_14"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_14"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_15"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_15"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_16"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_16"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_17"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_17"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_18"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_18"/>
+          android:layout_weight="1" />
 
    </LinearLayout>
 
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
-       android:orientation="horizontal"
-       android:gravity="center"
        android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
        android:weightSum="6">
+
       <Button
+          android:id="@+id/card_3_19"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_19"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_20"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_20"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_21"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_21"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_22"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_22"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_23"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_23"/>
+          android:layout_weight="1" />
+
       <Button
+          android:id="@+id/card_3_24"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
-          android:layout_weight="1"
-          android:id="@+id/card_3_24"/>
+          android:layout_weight="1" />
 
 
    </LinearLayout>
-   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+
+   <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
        android:orientation="vertical"
-       android:gravity="center"
-       android:layout_weight="2"
-       android:weightSum="2">
+       android:weightSum="3">
+
       <TextView
+          android:id="@+id/ma_text1"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
           android:layout_weight="1"
-          android:id="@+id/ma_text1"/>
+          android:textColor="#FFFFFF" />
+
       <TextView
+          android:id="@+id/ma_text2"
           android:layout_width="fill_parent"
           android:layout_height="fill_parent"
           android:layout_centerInParent="true"
           android:layout_weight="1"
-          android:id="@+id/ma_text2"/>
+          android:textColor="#FFFFFF" />
+
+      <TextView
+          android:id="@+id/ma_text3"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1"
+          android:textColor="#FFFFFF" />
    </LinearLayout>
 </LinearLayout>
