--- a/MemoryGame/app/src/main/res/layout/normal.xml
+++ b/MemoryGame/app/src/main/res/layout/normal.xml
@@ -1,238 +1,286 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="match_parent"
-   android:layout_height="match_parent" 
-   android:orientation="vertical"
-   android:gravity="center"
-   android:weightSum="10">
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card01"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card02"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card03"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card04"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card05"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card06"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card07"/>
-    
-  
-</LinearLayout>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/background"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:weightSum="10">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card08"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card09"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card10"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card11"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card12"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card13"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card14"/>
-    
-  
-</LinearLayout>
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card15"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card16"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card17"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card18"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card19"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card20"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card21"/>
-    
-  
-</LinearLayout>
+      <Button
+          android:id="@+id/card01"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="horizontal"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="7">
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card22"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card23"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card24"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card25"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card26"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card27"/>
-   <Button
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/card28"/>
-    
-  
-</LinearLayout>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
-   android:layout_width="fill_parent"
-   android:layout_height="fill_parent" 
-   android:orientation="vertical"
-   android:gravity="center"
-   android:layout_weight="2"
-   android:weightSum="2">
-   <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/ma_text1"/>
-   <TextView
-      android:layout_width="fill_parent"
-      android:layout_height="fill_parent"
-      android:layout_centerInParent="true"
-      android:layout_weight="1"
-      android:id="@+id/ma_text2"/>  
-</LinearLayout>
+      <Button
+          android:id="@+id/card02"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card03"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card04"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card05"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card06"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card07"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
+
+      <Button
+          android:id="@+id/card08"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card09"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card10"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card11"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card12"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card13"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card14"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
+
+      <Button
+          android:id="@+id/card15"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card16"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card17"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card18"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card19"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card20"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card21"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
+
+   <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+       xmlns:tools="http://schemas.android.com/tools"
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="horizontal"
+       android:weightSum="7">
+
+      <Button
+          android:id="@+id/card22"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card23"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card24"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card25"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card26"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card27"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+      <Button
+          android:id="@+id/card28"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1" />
+
+
+   </LinearLayout>
+
+   <LinearLayout
+       android:layout_width="fill_parent"
+       android:layout_height="fill_parent"
+       android:layout_weight="2"
+       android:gravity="center"
+       android:orientation="vertical"
+       android:weightSum="3">
+
+      <TextView
+          android:id="@+id/ma_text1"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1"
+          android:textColor="#FFFFFF" />
+
+      <TextView
+          android:id="@+id/ma_text2"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1"
+          android:textColor="#FFFFFF" />
+
+      <TextView
+          android:id="@+id/ma_text3"
+          android:layout_width="fill_parent"
+          android:layout_height="fill_parent"
+          android:layout_centerInParent="true"
+          android:layout_weight="1"
+          android:textColor="#FFFFFF" />
+   </LinearLayout>
 </LinearLayout>
